# Django_Polls_app

./: README.md
django-polls/: pyproject.toml
django-polls/django_polls.egg-info/: PKG-INFO  SOURCES.txt
django-polls/django_polls/migrations/: 0001_initial.py
django-polls/django_polls/static/polls/: style.css
django-polls/mysite/: settings.py
mysite/: db.sqlite3
mysite/polls/: admin.py  models.py  tests.py  views.py
mysite/polls/templates/polls/: detail.html  index.html  results.html
